blocks/modal.css
.modal {
  visibility: hidden;
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
}

.modal_is-opened {
  visibility: visible;
}

.modal__container {
  max-width: 730px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  background-color: #fff;
  padding: 32px 50px;
}

.modal__close-button {
  position: absolute;
  width: 40px;
  height: 40px;
  top: 32px;
  right: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  opacity: 0.4;
}

.modal__close-button:hover {
  opacity: 1;
}

.modal__close-button img {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
  border: rgba(33, 33, 33, 1);
  display: block;
}

.modal__title {
  margin: 0 0 32px;
  font-size: 32px;
  line-height: 1;
}

.modal__form {
  display: flex;
  flex-direction: column;
}

.modal__label {
  margin: 0 0 32px;
  font-size: 16px;
  line-height: 1.1;
  color: rgba(33, 33, 33, 0.7);
}

.modal__input {
  display: block;
  margin: 8px 0 0;
  width: 100%;
  border-radius: 8px;
  padding: 16px 12px;
  font-size: 20px;
  line-height: 1;
  border-color: 1px rgba(33, 33, 33, 0.4);
}

.modal__input::placeholder {
  color: rgba(33, 33, 33, 0.3);
}

.modal__input:hover {
  cursor: pointer;
}

.modal__submit-button {
  max-width: 156px;
  border-radius: 8px;
  background-color: rgba(33, 33, 33, 1);
  padding: 18px 32px;
  font-size: 16px;
  line-height: 1;
  color: rgba(252, 245, 229, 1);
  cursor: pointer;
}

@media screen and (max-width: 627px) {
  .modal__container {
    max-width: 300px;
    padding: 12px;
    position: relative;
  }

  .modal__form {
    max-width: 276px;
  }

  .modal__label {
    font-size: 16px;
  }

  .modal__input {
    font-size: 16px;
  }

  .modal__input::placeholder {
    font-size: 16px;
  }

  .modal__title {
    font-size: 20px;
  }

  .modal__input {
    font-size: 16px;
  }

  .modal__submit-button {
    width: 100%;
    max-width: none;
  }
}

